numpy part done

--- a/HW_L3_1/numpy_pandas.ipynb
+++ b/HW_L3_1/numpy_pandas.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "bda7cae4",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
       "[ True False  True  True  True  True  True  True  True False  True  True\n",
       "  True  True  True]\n",
       "execlent students:\n",
-      "ssafds\n"
+      "No students with all scores above 90\n"
      ]
     }
    ],
